plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.2'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-devtools'
	implementation 'io.github.cdimascio:java-dotenv:5.2.2' //.env 파일 자동 로드를 위해 추가

	//aws s3 연동을 위한 라이브러리
	implementation 'software.amazon.awssdk:s3:2.25.39'

	// ✅ Spring Elasticsearch
    implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'

    // ✅ OpenSearch Client
    implementation "org.opensearch.client:opensearch-java:2.11.0"
    implementation "org.opensearch.client:opensearch-rest-client:2.11.0"

    // ✅ AWS SDK BOM (이거 하나로 전부 해결)
    implementation platform("software.amazon.awssdk:bom:2.25.18")

    // ✅ AWS SDK Modules
    implementation "software.amazon.awssdk:auth"
    implementation "software.amazon.awssdk:regions"
    implementation "software.amazon.awssdk:apache-client"


	//Querydsl 추가
	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api"

	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5' // JSON 파싱을 위한 추가 라이브러리


	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	testCompileOnly 'org.projectlombok:lombok'  // 테스트 코드에서 사용 가능하게 추가
	annotationProcessor 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}
